--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "project-hajime",
   "version": "1.0.0",
   "description": "My First Project With Backend.",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "author": "Abhishek Sahu",
   "license": "ISC"
