--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "dev": "nodemon src/index.js"
   },
   "author": "Abhishek Sahu",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^3.2.5"
+  }
 }
