--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,4 @@
 {
-    "singleQuote": false,
-    "bracketSpacing": true,
-    "tabWidth": 2,
-    "trailingComma": "es5",
-    "semi": true
+  "tabWidth": 2,
+  "useTabs": false
 }
