--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Abhishek Sahu",
   "license": "ISC",
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "prettier": "^3.2.5"
   },
   "dependencies": {
@@ -22,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
     "mongoose-aggregate-paginate-v2": "^1.0.7",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.2"
   }
 }
